# mostlylucid.dse

./: .env.observability.example  .gitignore  ARTICLE_PART8_TOOLS_SYSTEM.md  BACKEND_ARCHITECTURE.md  CLAUDE_DESKTOP_SCHEDULER_GUIDE.md  CODEBASE_ARCHITECTURE.md  CODEBASE_EXPLORATION.md  CODE_CONTRACTS_IMPLEMENTATION.md  CODE_FIXING_CYCLE.md  COMPLETE_FIXES_SUMMARY.md  EVALUATION_SYSTEM_SUMMARY.md  EXECUTION_ARCHITECTURE.md  FINAL_FIXES.md  FLASK_INTEGRATION_QUICK_REFERENCE.md  FORGE_BUILD_SYSTEM_ARTICLE.md  HIERARCHICAL_RAG_IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  JSON_STRUCTURED_OUTPUT.md  LOAD_BALANCING_FIXES.md  MCPKG_ARTICLE.md  NEWS_SITE_README.md  NEW_TOOLS_SUMMARY.md  PARALLEL_EXECUTION.md  POSTGRES_INTEGRATION.md  QDRANT_FIXES.md  QUICK_REFERENCE.md  QUICK_START_EXAMPLES.md  README.md  SCHEDULER_README.md  SESSION_SUMMARY.md  SUMMARY.md  SYSTEM_OVERVIEW.md  TECHNICAL_WRITING_TOOLS.md  TELEMETRY_README.md  TEST_SUITE_README.md  TOOLS_OPTIMIZATION_SUMMARY.md  TOOLS_REFERENCE.md  WORKFLOW_IMPROVEMENTS_SUMMARY.md  WORKFLOW_REUSE.md  blog-article-dse-part7.md  (+15 more)
code_evolver/: .analysis_results.json  .code_evolver_history  .env.example  =2.0.4  ADAPTIVE_FIX_VALIDATION.md  ADAPTIVE_TIMEOUT.md  ADVANCED_FEATURES.md  AI_NOTES_DEBUG_STORE.md  ANTHROPIC_SDK_MIGRATION.md  APP_MANUAL.md  ARCHITECTURE.md  ARTIFACT_TYPE_IMPROVEMENTS.md  AUTO_FIX_INTEGRATION.md  AUTO_FIX_SYSTEM.md  AUTO_TEST_DATA_GENERATION.md  BACKGROUND_DEMO.md  BACKGROUND_EXECUTION_DESIGN.md  BACKGROUND_TOOLS_LOADING.md  BACKGROUND_WORKFLOWS.md  BUILD_SCRIPTS.md  CALL_TOOL_FIX_AND_OUTPUT_IMPROVEMENTS.md  CALL_TOOL_SIGNATURE_FIX.md  CHAT_CLI_FIX.md  CHAT_TOOLS_GUIDE.md  CLI_PANELS_README.md  CLI_STARTUP_FIX.md  CODE_CONTRACTS_GUIDE.md  CODE_FIX_LEARNING_SYSTEM.md  COMPLETE_NODE_GENERATION.md  COMPLETE_STATIC_PIPELINE.md  COMPLETE_SYSTEM_SUMMARY.md  CONFIGS_README.md  CONFIGURATION_GUIDE.md  CONFIG_FIX_SUMMARY.md  CONFIG_GUIDE.md  CONFIG_MINIMAL_GUIDE.md  CONVERSATION_MEMORY_ENHANCEMENT.md  DATA_GENERATION_CLASSIFICATION_FIX.md  DEBUG_STORE_README.md  DIRECTORY_STRUCTURE.md  (+194 more)
code_evolver/boring_news_output/: story_01_v00.md  story_01_v01.md  story_01_v02.md  story_01_v03.md  story_01_v04.md  story_01_v05.md  story_01_v06.md  story_01_v07.md  story_01_v08.md  story_01_v09.md  story_01_v10.md  story_02_v00.md  story_02_v01.md  story_02_v02.md  story_02_v03.md  story_02_v04.md  story_02_v05.md  story_02_v06.md  story_02_v07.md  story_02_v08.md  story_02_v09.md  story_02_v10.md  story_03_v00.md  story_03_v01.md  story_03_v02.md  story_03_v03.md  story_03_v04.md  story_03_v05.md  story_03_v06.md  story_03_v07.md  story_03_v08.md  story_03_v09.md  story_03_v10.md  story_04_v00.md  story_04_v01.md  story_04_v02.md  story_04_v03.md  story_04_v04.md  story_04_v05.md  story_04_v06.md  (+109 more)
(+873 files in other folders)
