[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-evolver"
version = "0.1.0"
description = "AI-Powered Code Evolution System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mostlylucid DiSE Team"}
]
keywords = ["ai", "code-generation", "llm", "evolution", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0.1",
    "rich>=13.7.0",
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=6.3.0",
]

[project.scripts]
code-evolver = "code_evolver.chat_cli:main"
code-evolver-orchestrator = "code_evolver.orchestrator:main"

[project.urls]
Homepage = "https://github.com/yourusername/code-evolver"
Documentation = "https://github.com/yourusername/code-evolver/blob/main/README.md"
Repository = "https://github.com/yourusername/code-evolver"
Issues = "https://github.com/yourusername/code-evolver/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_evolver_pkg*"]
exclude = ["tests*", "nodes*", "registry*", "rag_memory*", "output*", "artifacts*", "temp*"]

[tool.setuptools.package-data]
code_evolver = [
    "*.yaml",
    "*.yml",
    "*.md",
    "tools/**/*.yaml",
    "tools/**/*.yml",
    "templates/**/*.py",
    ".claude/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | nodes
  | registry
  | rag_memory
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    'nodes/',
    'registry/',
    'rag_memory/',
    'build/',
    'dist/',
]
